add partB and fix conflict