@@ -9,15 +9,17 @@ import org.framework.schedule.Schedule;
 import org.reflections.Reflections;
 
 import java.lang.annotation.Annotation;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Set;
+import java.lang.reflect.Method;
+import java.util.*;
 
 public class SprungApplication {
     private static final HashMap<Class<?>, List<Object>> sprungContext = new HashMap<>();
-
 
     public static void run(Class<?> primaryClass, String[] args) {
         try {
@@ -25,7 +27,10 @@ public class SprungApplication {
             instantiateApplicationEventPublisher();
 
             Object primaryClassInstance =  primaryClass.getDeclaredConstructor().newInstance();
+            // Call the constructor injection method first
+            performConstructorDI();
             performFieldDI(primaryClassInstance);
+            performSetterDI();
 
             // do run() for application
             Runnable primary = (Runnable) primaryClassInstance;
@@ -43,10 +48,10 @@ public class SprungApplication {
             Reflections reflections = new Reflections(primaryClass.getPackageName(), SprungApplication.class.getPackageName());
 
             for(SprungClassAnnotation annotation: SprungClassAnnotation.values()){
-
                 Set<Class<?>> annotatedClasses = reflections.getTypesAnnotatedWith(annotation.value());
                 for (Class<?> annotatedClass : annotatedClasses) {
-                    Object object = (Object) annotatedClass.newInstance();
+//                    Object object = (Object) annotatedClass.getDeclaredConstructor().newInstance();
+                    Object object = createInstanceWithConstructorDI(annotatedClass);
                     if(sprungContext.containsKey(annotation.value())){
                         sprungContext.get(annotation.value()).add(object);
                     }else{
@@ -54,6 +59,7 @@ public class SprungApplication {
                         list.add(object);
                         sprungContext.put(annotation.value(), list);
                     }
+                    // Adding instances to the context
                 }
             }
 
@@ -75,6 +81,55 @@ public class SprungApplication {
             List<Object> list = new ArrayList<>();
             list.add(publisher);
             sprungContext.put(ApplicationEventPublisher.class, list);
+        }
+    }
+
+    // Helper method to create an instance considering constructor DI
+    private static Object createInstanceWithConstructorDI(Class<?> clazz) {
+        try {
+            Constructor<?> autowiredConstructor = findConstructorWithAutowired(clazz);
+            if (autowiredConstructor != null) {
+                Class<?>[] parameterTypes = autowiredConstructor.getParameterTypes();
+                Object[] parameters = Arrays.stream(parameterTypes)
+                        .map(SprungApplication::getBeanOfType)
+                        .toArray();
+                autowiredConstructor.setAccessible(true);
+                return autowiredConstructor.newInstance(parameters);
+            } else {
+                // Use the default constructor if no @Autowired constructor is found
+                return clazz.getDeclaredConstructor().newInstance();
+            }
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to instantiate class: " + clazz.getName(), e);
+        }
+    }
+
+    private static Constructor<?> findConstructorWithAutowired(Class<?> clazz) {
+        for (Constructor<?> constructor : clazz.getDeclaredConstructors()) {
+            if (constructor.isAnnotationPresent(Autowired.class)) {
+                return constructor;
+            }
+        }
+        return null;
+    }
+
+    private static void performConstructorDI() {
+        try {
+            for (List<Object> objects : sprungContext.values()) {
+                for (Object object : objects) {
+                    Constructor<?> constructor = findConstructorWithAutowired(object.getClass());
+                    if (constructor != null) {
+                        Class<?>[] parameterTypes = constructor.getParameterTypes();
+                        Object[] parameters = Arrays.stream(parameterTypes)
+                                .map(SprungApplication::getBeanOfType)
+                                .toArray();
+                        constructor.setAccessible(true);
+                        constructor.newInstance(parameters);
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
@@ -103,6 +158,26 @@ public class SprungApplication {
             }
         }
     }
+    private static void performSetterDI() {
+        try {
+            for (List<Object> objects : sprungContext.values()) {
+                for (Object object : objects) {
+                    for (Method method : object.getClass().getDeclaredMethods()) {
+                        if (method.isAnnotationPresent(Autowired.class) && method.getName().startsWith("set") && method.getParameterCount() == 1)
+                        {
+                            Object parameter = getBeanOfType(method.getParameterTypes()[0]);
+                            if (parameter != null) {
+                                method.setAccessible(true);
+                                method.invoke(object, parameter);
+                            }
+                        }
+                    }
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
 
     public static Object getBeanOfType(Class fieldType) {
         Object bean = null;
@@ -124,6 +199,7 @@ public class SprungApplication {
                             bean = object;
                         }
                     }
+
                 }
             }
         } catch (Exception e) {
